<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.home.HomeActivity">

    <data>
        <variable
            name="handle"
            type="com.example.baseandroid.ui.home.HomeHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <TextView
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/home"
            android:id="@+id/textview" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview">
            <Button
                android:id="@+id/logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/logout"
                android:onClick="@{()->handle.didTapLogOut()}"/>
            <Button
                android:id="@+id/openwebview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->handle.didTapWebview()}"
                android:text="@string/toWebview" />
            <Button
                android:id="@+id/refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()->handle.didTapRefresh()}"
                android:text="@string/refresh" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>